--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     {% for product in products %}
     <li>
         <h3>{{ product.name }}</h3>
-        <!-- Image part with hero reference update -->
+        <!-- Updated image reference from '-icon' to '-hero' -->
         <img src="{{ url_for('static', filename=product.hero_image) }}" alt="{{ product.name }}">
         <p>${{ product.price }}</p>
         <p>{{ product.description }}</p>
